--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,22 @@
-theme: jekyll-theme-architect
+title: blog coming soon!
+author: Ray
+# email: kunhuang@connect.hku.hk
+email: 123@abc.com
+description: >- # this means to ignore newlines until "baseurl:"
+  viva la vida!
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  hku
+
+minima:
+  date_format: "%b %-d, %Y"
+
+
+header_pages:
+  - about.html
+
+# Build settings
+markdown: kramdown
+# theme: minima
+plugins:
+  - jekyll-feed
