--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title: blog coming soon!
-author: Ray
-# email: kunhuang@connect.hku.hk
-email: 123@abc.com
+title: K. Huang's Matrix
+author: K. Huang
+email: kunhuang@connect.hku.hk
 description: >- # this means to ignore newlines until "baseurl:"
   viva la vida!
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -20,3 +19,11 @@ markdown: kramdown
 # theme: minima
 plugins:
   - jekyll-feed
+
+defaults:
+  -
+    scope:
+      path: "articles"
+    values:
+      layout: "article"
+      article: true
